fix: fix an issue that make that some endpoint does not work in swagger
